--- a/css/index.css
+++ b/css/index.css
@@ -20,6 +20,11 @@
     background-color: rgb(47, 158, 71);
     transition: 0.2s;
 }
-.button-success:hover{
+.button-success:hover, .button-success:focus{
     color:white;
+}
+.footer{
+    position: fixed;
+  left: 50;
+  bottom: 0;
 }
