added function to dismiss error

--- a/css/index.css
+++ b/css/index.css
@@ -24,6 +24,7 @@
     background-color: rgb(235, 80, 85);
     border-radius: 2px;
     color: white;
+    cursor: pointer;
 }
 
 button.button-primary{
